syntax = "proto3";

option csharp_namespace = "NotificationService.Grpc";

package SachkovTech.Grpc;

message GuidGrpc
{
  string Guid = 1;
}